# crypto-monitor

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
crypto_monitor/: __init__.py  app.py  forex.py  kraken.py  schemas.py
